log
Sun, May 18, 2025  5:36:21 PM: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:5:
sudoku.c: In function 'is_valid':
sudoku.c:54:1: error: control reaches end of non-void function [-Werror=return-type]
   54 | }
      | ^
cc1.exe: all warnings being treated as errors
3f0e54c
